...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loading" translatesAutoresizingMaskIntoConstraints="NO" id="Co3-j1-8Ej">
                                <rect key="frame" x="103.5" y="44" width="207" height="358.5"/>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ghP-82-ggK" customClass="BindingTextField" customModule="MyTalk" customModuleProvider="target">
                                <rect key="frame" x="41.5" y="417.5" width="331" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="k62-80-hmt"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ozB-Ji-d9B" customClass="BindingTextField" customModule="MyTalk" customModuleProvider="target">
                                <rect key="frame" x="41.5" y="465.5" width="331" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="qX6-1B-gm5"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N8F-P7-nU7">
                                <rect key="frame" x="62" y="525.5" width="290" height="30"/>
                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                <state key="normal" title="로그인">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="logInEvent:" destination="PHQ-YU-AZ4" eventType="touchUpInside" id="Fry-xO-ktN"/>
                                </connections>
                            </button>
...
